<resources>
    <string name="app_name">Trova Il Decimo</string>

    <!-- String Navigaton Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home_text">Home</string>
    <string name="profilo_menu_text">Profilo</string>
    <string name="area_messaggi_text">Cerca campo</string>
    <string name="amici_menu_text">Amici</string>
    <string name="impostazioni_text">Impostazioni</string>

    <!-- Stirng User Profile Details -->
    <string name="user_informazioni_personali_text">Informazioni personali: </string>
    <string name="user_informazioni_giocatore_text">Informazioni giocatore: </string>
    <string name="user_age_field_text">Anni: </string>
    <string name="user_city_field_text">Città: </string>
    <string name="user_role_field_text">Ruolo: </string>
    <string name="user_match_played_text">Partite giocate: </string>
    <string name="user_feedback_text">Feedback: </string>

    <!--String Matches Main Fragment -->
    <string name="toolbar_matches_main_fragment">Partite nelle vicinanze</string>
    <string name="nessuna_partita">Nessuna partita</string>

    <!-- String Card View -->
    <string name="card_view_luogo_text">Via Nome, n° civico</string>
    <string name="card_view_orario_text">Ora:Minuti</string>
    <string name="card_view_giorno_text">Giorno/Mese/Anno</string>

    <!-- -->
    <string name="fragment_friends_tab1">Trova Persone</string>
    <string name="fragment_friends_tab2">Che segui</string>
    <string name="fragment_friends_tab3">Che ti seguono</string>

    <!-- String to Friends Other Fragment -->
    <string name="friend_added">Amico Aggiunto</string>
    <string name="delete_added">Annulla</string>

    <!-- String utilizzate per creare una nuova partita -->
    <string name="seleziona_giorno_ora_text">Inserisci le varie informazioni</string>
    <string name="numero_giocatori_text">Numero di giocatori</string>
    <string name="tipo_partita_text">Tipo di partita</string>
    <string name="durata_partita_text">Durata partita</string>
    <string name="normale_text">Normale</string>
    <string name="sfida_text">Sfida</string>
    <string name="sessanta_minuti_text">60</string>
    <string name="novanta_minuti_text">90</string>
    <string name="centoventi_minuti_text">120</string>
    <string name="add_partencipant_button_text">Aggiungi partecipanti</string>
    <string name="avvia_nuova_partita_text">Crea partita</string>


    <!-- Setting Strings -->
    <string name="setting_infomation_app_title">Informazioni generali</string>
    <string name="title_version">Versione</string>
    <string name="title_info_legali"></string>

</resources>
