<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home_text" />

        <item
            android:id="@+id/profilo_menu"
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="@string/profilo_menu_text" />

        <item
            android:id="@+id/amici_menu"
            android:icon="@drawable/ic_group_white_24dp"
            android:title="@string/amici_menu_text" />

        <item
            android:id="@+id/cerca_campo_menu"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/area_messaggi_text" />

        <item
            android:id="@+id/impostazioni_menu"
            android:icon="@drawable/ic_settings_applications_white_24dp"
            android:title="@string/impostazioni_text" />

    </group>

</menu>