<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuovaPartita">

    <android.support.v7.widget.Toolbar
        android:id="@+id/nuova_partita_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/orario_giorno_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleziona_giorno_ora_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:src="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:id="@+id/nuova_partita_orario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:clickable="true"
                android:textColor="@color/blue_gray_500"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:src="@drawable/ic_event_black_24dp" />

            <TextView
                android:id="@+id/nuova_partita_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:clickable="true"
                android:textColor="@color/blue_gray_500"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/numero_giocatori_seekbar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/numero_giocatori_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/numero_partecipanti_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="6" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/nuova_partita_luogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome del campo"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tipo_partita_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_partita_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/normale_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/normale_text" />

            <RadioButton
                android:id="@+id/sfida_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sfida_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/durata_partita_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/durata_partita_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sessanta_minuti_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sessanta_minuti_text" />

            <RadioButton
                android:id="@+id/novanta_minuti_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novanta_minuti_text" />

            <RadioButton
                android:id="@+id/centoventi_minuti_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centoventi_minuti_text" />

        </RadioGroup>

        <Button
            android:id="@+id/nuova_partita_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="Crea partita" />

    </LinearLayout>

</LinearLayout>