<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5E9"
    android:orientation="vertical">

    <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
        android:id="@+id/informazioni_personali_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="2dp"
        android:text="@string/user_informazioni_personali_text" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:elevation="4dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/user_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">


                <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                    android:id="@+id/user_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="24sp" />


                <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                    android:id="@+id/user_sunname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
        android:id="@+id/informazioni_giocatore_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="2dp"
        android:text="@string/user_informazioni_giocatore_text" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:elevation="4dp"
        app:cardCornerRadius="2dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="5"
            android:useDefaultMargins="true">

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_age_field_text"
                android:textSize="15sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:id="@+id/user_age_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_city_field_text"
                android:textSize="15sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:id="@+id/user_city_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_role_field_text"
                android:textSize="15sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:id="@+id/user_role_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_match_played_text"
                android:textSize="15sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:id="@+id/user_num_games_played_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_feedback_text"
                android:textSize="15sp" />

            <it.prochilo.salvatore.trovaildecimo.custom_view.CustomTextViewRobotoRegular
                android:id="@+id/user_feedbak_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />


        </GridLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>