<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_partita"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/margin_card_view_top_bottom"
    android:layout_marginLeft="@dimen/margin_card_view_right_left"
    android:layout_marginRight="@dimen/margin_card_view_right_left"
    android:layout_marginTop="@dimen/margin_card_view_top_bottom"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/card_view_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/card_view_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/prova_image_user"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/card_view_organizzatore_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/card_view_informazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_header"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/icon_giorno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:src="@drawable/ic_event_black_24dp" />

            <TextView
                android:id="@+id/card_view_giorno_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/icon_ora"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/icon_giorno"
                android:layout_toRightOf="@+id/icon_giorno"
                android:text="@string/card_view_giorno_text"
                android:textColor="@color/blue_gray_500"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/icon_ora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_giorno"
                android:alpha="0.5"
                android:src="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:id="@+id/card_view_ora_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/icon_luogo"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/icon_ora"
                android:layout_toRightOf="@+id/icon_ora"
                android:text="@string/card_view_orario_text"
                android:textColor="@color/blue_gray_500"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/icon_luogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_ora"
                android:alpha="0.5"
                android:src="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:id="@+id/card_view_luogo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/icon_luogo"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/icon_luogo"
                android:layout_toRightOf="@+id/icon_luogo"
                android:text="@string/card_view_luogo_text"
                android:textColor="@color/blue_gray_500"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/card_view_numPartecipanti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view_luogo_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/card_view_numPlayedMissing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view_numPartecipanti"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/dettagli_partita_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/card_view_informazioni"
            android:text="Dettagli partita"
            android:textColor="?attr/colorPrimary" />
    </RelativeLayout>
</android.support.v7.widget.CardView>